# IntoneCount

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/mkproject/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  audio_matcher.cpp
app/src/main/java/com/example/mkproject/: MainActivity.kt
app/src/main/java/com/example/mkproject/javaPackages/: AudioMatcher.java  MantraRecognizer.java
app/src/main/java/com/example/mkproject/ui/theme/: Color.kt  MainScreen.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: styles.xml
app/src/test/java/com/example/mkproject/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
